<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bezirk</string>
    <string name="action_settings">Settings</string>
    <string name="strItemTitle">Item Title</string>
    <string name="strItemHint">hint text</string>
    <string name="title_activity_device_control">DeviceControl</string>
    <string name="about_version_text">Bezirk v2.1, January 2016, © Bosch</string>
    <string name="about_copyright_text"> © Bosch</string>
    <string name="about_text">Bezirk is an experimental set of products for personalization and assistance in the Internet of Things.  This is a limited release intended for academic and research purposes. If you’d like to know more, contact joaop.sousa@us.bosch.com. </string>
    <!-- Logging Related -->
    <string name="title_activity_sphere_select_logging">Remote-Logging</string>
    <string name="buttonLabelStartLogging">Start Logging</string>
    <string name="buttonLabelFetchSpheres">Get Spheres</string>
    <string name="title_activity_log_data">Logging Data</string>
    <string name="menu_stop_logging">STOP-LOGGING</string>
    <string name="label_dev_mode_enabled">Developer-Mode Enabled</string>
    <string name="alert_dialog_message">Are you sure you want to stop Logging? \n The logged Data will be lost</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <string name="table_heading_sphere">SPHERE</string>
    <string name="table_heading_sender">SENDER</string>
    <string name="table_heading_msgId">TIME-STAMP</string>
    <string name="table_heading_recipient">RECIPIENT</string>
    <string name="table_heading_topic">TOPIC</string>
    <string name="table_heading_type"># - RECEIVERS</string>
    <string name="title_activity_comms_test">CommunicationTest</string>

    <string name="menu_config">Configuration</string>
    <string name="menu_hint">Diagnosis hints</string>
    <string name="title_activity_diagnosis">Diagnosis</string>

    <string name="comms_info_label">Press Test and look for the response. If you don\'t see the response from other device, check the hints (from menu) and redo the test!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
