<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_item_table_bg"
    tools:context="com.bosch.upa.uhu.controlui.logging.LogDataActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <TableLayout
        android:id="@+id/logdataTableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:background="@color/bg_table_cell"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/table_heading_sphere" />

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:background="@color/bg_table_cell"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/table_heading_msgId" />

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:background="@color/bg_table_cell"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/table_heading_sender" />

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:background="@color/bg_table_cell"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/table_heading_recipient" />

            <TextView
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_marginRight="2dp"
                android:background="@color/bg_table_cell"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/table_heading_topic" />

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:background="@color/bg_table_cell"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/table_heading_type" />
        </TableRow>

    </TableLayout>
    </ScrollView>
</RelativeLayout>
